# TODOshnick_pub

./: .gitignore  Interface.puml  Notes.puml  README.md  Viewer.puml  start.sh
b/: CMakeCache.txt  Makefile  cmake_install.cmake  test_project01
b/src/notes/: Makefile
project_sources/: CMakeLists.txt
project_sources/include/interfaces/: InteractiveRTInterface.h  Interface.h
project_sources/include/notes/: Aspect.h  Note.h  Project.h  Task.h  Todo.h
project_sources/include/viewers/: DescriptionViewer.h  FullNameViewer.h  RecursiveAllInfo.h  RecursiveFull.h  ShortNameViewer.h  StatusBarViewer.h  Viewer.h
project_sources/src/interfaces/: CMakeLists.txt  InteractiveRTInterface.cpp  Interface.cpp
project_sources/src/notes/: Aspect.cpp  CMakeLists.txt  Note.cpp  Project.cpp  Task.cpp  Todo.cpp
project_sources/src/viewers/: CMakeLists.txt  DescriptionViewer.cpp  FullNameViewer.cpp  RecursiveAllInfo.cpp  RecursiveFull.cpp  ShortNameViewer.cpp  StatusBarViewer.cpp
project_sources/starts/: test_interfaces.cpp  test_note_structure.cpp  test_project.cpp  test_task.cpp  test_todo.cpp  test_viewer_base_work.cpp
tests/test01/: CMakeCache.txt  Makefile  cmake_install.cmake  test_note_structure01
tests/test01/src/notes/: Makefile  cmake_install.cmake
